# unav2_firmware

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dev_setup.sh  requirements-dev.txt  toolchain_setup.sh
.devcontainer/: Dockerfile  devcontainer.json  install_arm_gcc.sh
CMake/: GNU-ARM-Toolchain.cmake
CMake/Modules/: Findnnvg.cmake
app/include/: application.h  debug.h  timing.h  tusb_config.h
app/include/bsp/: board.h
app/include/io/: can_common.h  stream.h
app/include/io/usb/: cdc.h
app/include/io/usb/gs_can/: gs_usb.h  gs_usb_private.h
app/include/modules/cli/: module.h
app/include/modules/cli/cmd_handlers/: task_list.h
app/include/opencyphal/: canard_wrapper.h  cyphal_messages_handlers.h  icanard.h  opencyphal.h  registers.h
app/include/opencyphal/data_types/: dummy.dsdl
app/include/wrappers/: queue.h  semaphore.h  thread.h  timer.h
app/include/wrappers/includes/: queue_w.h
app/include/wrappers/private/: queue_w.h  wrapper_utils.h
app/src/: CMakeLists.txt  custom_assert.c  opencyphal_support.cmake  stm32f4xx_hal_timebase_tim.c
app/src/bsp/: board.cpp
app/src/io/usb/cdc/: usb_descriptors.c
app/src/io/usb/gs_can/: usb_descriptors.c
app/src/modules/cli/: cli_commands.cpp
design/: design_firmware.md  unav2.md
include/: FreeRTOSConfig.h  application.h  configuration.h  etl_profile.h  instrumentation.h  stm32f4xx_hal_conf.h  timing.h  tusb_config.h
include/comm/: streaming_if.h  streams.h
include/comm/usb/: board_bsp.h  cdc.cpp  cdc.h
include/io/: bidirectional_stream.h  memory_block_pool.h  stream.h  stream_provider.h
include/io/usb/: cdc.h
include/io/usb/gs_can/: gs_usb.h  gs_usb_private.h
include/modules/: climodule.h
include/modules/cli/: cli_commands.h  module.h
include/modules/cli/cmd_handlers/: task_list.h
include/wrappers/: queue.h  semaphore.h  taskpriority.h
include/wrappers/includes/: queue_w.h
include/wrappers/staticalloc/: thread.h
lib/: CMakeLists.txt  cmsis.cmake  embedded_cli.cmake  hal_driver.cmake  libcanard.cmake  nanopb.cmake  o1heap.cmake  rtt.cmake  tinyusb.cmake
linker/: STM32F405RGTx_FLASH.ld
setup/: 70-gs_usb_can.link  80-can.network  99-unav.rules  README.md  bind_vcan.sh  bridge_can_device.service  can_modules.conf  create_vcan0.sh  install.sh  unav.rules  vcan0.netdev
src/: CMakeLists.txt  freertos_support.c  freertos_support.cpp  main.cpp  stm32f4xx_it.c
src/bsp/: board.cpp
src/comm/usb/: usb_board.cpp
src/comm/usb/cdc/: usb.cpp  usb_descriptors.c
src/io/usb/cdc/: usb_descriptors.c
src/io/usb/gs_can/: usb_descriptors.c
src/modules/cli/: cli_commands.cpp
src/usb/: usb_descriptors.c
tools/: local_toolchain_setup.sh  openocd.cfg
vagrant/: Vagrantfile
